tests/snapshots/errors/vec_new_wrong_args.mc
// Error: vec::new() should not take any arguments
let v = vec::new(10);
